syntax = "proto3";

option csharp_namespace = "clientProto";

package greet;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GetUserGrpc (UserGrpcById) returns (UserGrpc);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

// Objeto a traves de Protocol Buffers
message UserGrpc {
  int32 id = 1;
  string name = 2;
}

// Para traer al cliente
message UserGrpcById {
  int32 id = 1;
}